---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  br label %loop_body

loop_body:                                        ; preds = %12, %entry_block
  %"9_0.0" = phi i64 [ 3, %entry_block ], [ %14, %12 ]
  %"9_1.0" = phi i64 [ 7, %entry_block ], [ %0, %12 ]
  %0 = mul i64 %"9_1.0", 2
  %1 = icmp eq i64 %"9_0.0", 0
  %2 = select i1 %1, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  %3 = extractvalue { i32, {}, {} } %2, 0
  switch i32 %3, label %4 [
    i32 1, label %6
  ]

4:                                                ; preds = %loop_body
  %5 = extractvalue { i32, {}, {} } %2, 1
  br label %cond_17_case_0

6:                                                ; preds = %loop_body
  %7 = extractvalue { i32, {}, {} } %2, 2
  br label %cond_17_case_1

loop_out:                                         ; preds = %15
  ret i64 %0

cond_17_case_0:                                   ; preds = %4
  %8 = sub i64 %"9_0.0", 1
  %9 = insertvalue { i64 } undef, i64 %8, 0
  %10 = insertvalue { i32, { i64 }, {} } { i32 0, { i64 } poison, {} poison }, { i64 } %9, 1
  br label %cond_exit_17

cond_17_case_1:                                   ; preds = %6
  br label %cond_exit_17

cond_exit_17:                                     ; preds = %cond_17_case_1, %cond_17_case_0
  %"011.0" = phi { i32, { i64 }, {} } [ %10, %cond_17_case_0 ], [ { i32 1, { i64 } poison, {} undef }, %cond_17_case_1 ]
  %11 = extractvalue { i32, { i64 }, {} } %"011.0", 0
  switch i32 %11, label %12 [
    i32 1, label %15
  ]

12:                                               ; preds = %cond_exit_17
  %13 = extractvalue { i32, { i64 }, {} } %"011.0", 1
  %14 = extractvalue { i64 } %13, 0
  br label %loop_body

15:                                               ; preds = %cond_exit_17
  %16 = extractvalue { i32, { i64 }, {} } %"011.0", 2
  br label %loop_out
}
